[Task] Edited website text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
+            <h1 class="mb-5">PaperTrail is an app that allows the community to serve as a public library for all!</h1>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
           </div>
         </div>
@@ -100,8 +100,8 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
+        <h2>Books For All</h2>
+        <p class="text-muted">Search for the books you need! And if you can't find them...ask for them!</p>
         <hr>
       </div>
       <div class="row">
@@ -126,15 +126,15 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                  <h3>Book Petitions</h3>
+                  <p class="text-muted">If you want to borrow or buy a book, make a petition for it to the community and see if anyone has it for you!</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                  <h3>Barcode Scan</h3>
+                  <p class="text-muted">Search for books to borrow or add to your library by simply scanning the barcode on the back!</p>
                 </div>
               </div>
             </div>
@@ -142,14 +142,14 @@
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                  <h3>Lend your Books</h3>
+                  <p class="text-muted">List your books as available for lending to other users. You can even set up meeting with them all withing the app!</p>
                 </div>
               </div>
               <div class="col-lg-6">
                 <div class="feature-item">
                   <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
+                  <h3>Cheaper Rates</h3>
                   <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
                 </div>
               </div>
